--- a/home-page/html/checkout.html
+++ b/home-page/html/checkout.html
@@ -554,239 +554,254 @@
     <script src="../js/auth.js"></script>
     <script>
     // Định nghĩa API_BASE_URL (thay thế bằng URL thực tế của backend)
-     // Cập nhật URL backend của bạn
 
-    // Hàm lấy thông tin người dùng
-    async function fetchUserInfo() {
-            try {
-                const usernameInput = document.getElementById('username');
-                const emailInput = document.getElementById('email');
-                const phoneInput = document.getElementById('phone');
-                const addressInput = document.getElementById('address');
-                const usernameDisplay = document.getElementById('username-display');
 
-                if (!usernameInput || !emailInput || !phoneInput || !addressInput || !usernameDisplay) {
-                    throw new Error('Không tìm thấy một hoặc nhiều element trong DOM');
-                }
+// Hàm xóa dữ liệu đơn hàng cũ
+function clearStaleOrderData() {
+    try {
+        // Xóa các key liên quan đến đơn hàng hoặc thanh toán trong localStorage
+        localStorage.removeItem('orderId'); // Nếu bạn lưu orderId
+        localStorage.removeItem('paymentId'); // Nếu bạn lưu paymentId
+        localStorage.removeItem('pendingOrder'); // Nếu bạn lưu thông tin đơn hàng tạm thời
+        console.log('Đã xóa dữ liệu đơn hàng cũ trong localStorage');
+    } catch (error) {
+        console.error('Lỗi khi xóa dữ liệu đơn hàng cũ:', error.message);
+    }
+}
 
-                const token = localStorage.getItem('accessToken');
-                console.log('Access Token:', token);
-                if (!token) {
-                    console.warn('Không tìm thấy access token. Chuyển hướng đến trang đăng nhập.');
-                    alert('Vui lòng đăng nhập để tiếp tục.');
-                    window.location.href = 'login.html';
-                    return;
-                }
+// Hàm lấy thông tin người dùng
+async function fetchUserInfo() {
+    try {
+        const usernameInput = document.getElementById('username');
+        const emailInput = document.getElementById('email');
+        const phoneInput = document.getElementById('phone');
+        const addressInput = document.getElementById('address');
+        const usernameDisplay = document.getElementById('username-display');
 
-                const payload = parseJwt(token);
-                console.log('JWT Payload:', payload);
-                if (!payload || !payload.id) {
-                    throw new Error('Token không hợp lệ hoặc không tìm thấy ID người dùng');
-                }
-
-                if (payload.exp * 1000 < Date.now()) {
-                    console.warn('Token đã hết hạn');
-                    localStorage.removeItem('accessToken');
-                    alert('Phiên đăng nhập đã hết hạn. Vui lòng đăng nhập lại.');
-                    window.location.href = 'login.html';
-                    return;
-                }
-
-                const userId = payload.id;
-                console.log('Đang lấy thông tin người dùng cho ID:', userId);
-                const response = await fetch(`${API_BASE_URL}/users/${userId}`, {
-                    method: 'GET',
-                    headers: {
-                        'Authorization': `Bearer ${token}`,
-                        'Content-Type': 'application/json'
-                    }
-                });
-
-                console.log('Trạng thái API Response:', response.status);
-                if (!response.ok) {
-                    const errorText = await response.text();
-                    throw new Error(`Lỗi HTTP! Trạng thái: ${response.status}, Thông báo: ${errorText}`);
-                }
-
-                const data = await response.json();
-                console.log('Dữ liệu API Response:', data);
-                if (!data.result) {
-                    throw new Error('Không có dữ liệu người dùng trong trường "result"');
-                }
-
-                const user = data.result;
-                console.log('Dữ liệu người dùng:', user);
-
-                // Điền thông tin vào form với hiệu ứng
-                usernameInput.value = user.username || '';
-                emailInput.value = user.email || '';
-                phoneInput.value = user.phone || '';
-                addressInput.value = user.address || '';
-                usernameDisplay.textContent = user.username || payload.sub || 'Người dùng';
-
-                // Thêm hiệu ứng success
-                document.querySelector('.form-section').classList.add('form-success');
-                setTimeout(() => {
-                    document.querySelector('.form-section').classList.remove('form-success');
-                }, 600);
-
-            } catch (error) {
-                console.error('Lỗi khi lấy thông tin người dùng:', error.message);
-                alert(`Không thể tải thông tin người dùng: ${error.message}. Vui lòng kiểm tra lại đăng nhập.`);
-            }
+        if (!usernameInput || !emailInput || !phoneInput || !addressInput || !usernameDisplay) {
+            throw new Error('Không tìm thấy một hoặc nhiều element trong DOM');
         }
 
-    // Xử lý submit form với loading
-    async function handleFormSubmission(e) {
-        e.preventDefault();
-
-        const username = document.getElementById('username')?.value;
-        const email = document.getElementById('email')?.value;
-        const phone = document.getElementById('phone')?.value;
-        const address = document.getElementById('address')?.value;
-        const paymentMethod = document.querySelector('input[name="payment-method"]:checked')?.value;
-
-        if (!username || !email || !phone || !address || !paymentMethod) {
-            alert('Vui lòng điền đầy đủ thông tin.');
+        const token = localStorage.getItem('accessToken');
+        console.log('Access Token:', token);
+        if (!token) {
+            console.warn('Không tìm thấy access token. Chuyển hướng đến trang đăng nhập.');
+            alert('Vui lòng đăng nhập để tiếp tục.');
+            window.location.href = 'login.html';
             return;
         }
 
-        // Hiển thị loading
-        const submitBtn = document.querySelector('.btn-checkout');
-        const spinner = document.querySelector('.loading-spinner');
-        const btnText = submitBtn.innerHTML;
-
-        spinner.style.display = 'inline-block';
-        submitBtn.disabled = true;
-        submitBtn.style.opacity = '0.7';
-
-        try {
-            const token = localStorage.getItem('accessToken');
-            if (!token) {
-                throw new Error('Vui lòng đăng nhập để tiếp tục.');
-            }
-
-            const payload = parseJwt(token);
-            if (!payload || !payload.id) {
-                throw new Error('Token không hợp lệ hoặc không tìm thấy ID người dùng.');
-            }
-
-            const cart = JSON.parse(localStorage.getItem('cart')) || [];
-            if (cart.length === 0) {
-                throw new Error('Giỏ hàng trống. Vui lòng thêm món ăn trước khi đặt hàng.');
-            }
-
-            // Map cart items to orderItems
-            const orderItems = cart.map(item => ({
-                menuItemId: item.id, // Giả sử item.id là menuItemId
-                quantity: item.quantity
-            }));
-
-            const orderRequest = {
-                userId: payload.id,
-                orderType: 'DELIVERY', // Giả sử checkout dành cho giao hàng
-                tableId: null, // Không cần cho DELIVERY
-                orderItems: orderItems,
-                payment: {
-                    paymentMethod: paymentMethod // ONLINE hoặc CASH
-                }
-            };
-
-            console.log('Sending order request:', orderRequest);
-
-            const response = await fetch(`${API_BASE_URL}/orders`, {
-                method: 'POST',
-                headers: {
-                    'Authorization': `Bearer ${token}`,
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(orderRequest)
-            });
-
-            if (!response.ok) {
-                const errorData = await response.json();
-                throw new Error(errorData.message || 'Lỗi khi tạo đơn hàng.');
-            }
-
-            const data = await response.json();
-            const orderResponse = data.result;
-
-            // Xóa giỏ hàng sau khi đặt hàng thành công
-            localStorage.removeItem('cart');
-
-            // Gọi updateCartCount nếu tồn tại (từ auth.js)
-            if (typeof updateCartCount === 'function') {
-                updateCartCount();
-            }
-
-            // Xử lý redirect cho thanh toán online
-            if (paymentMethod === 'ONLINE' && orderResponse.payment?.paymentUrl) {
-                alert('Đang chuyển đến trang thanh toán...');
-                window.location.href = orderResponse.payment.paymentUrl;
-            } else {
-                alert('Đặt hàng thành công! Bạn sẽ nhận được xác nhận sớm.');
-                window.location.href = 'order-confirmation.html'; // Trang xác nhận đơn hàng
-            }
-        } catch (error) {
-            console.error('Lỗi khi gửi đơn hàng:', error.message);
-            alert(`Lỗi: ${error.message}`);
-        } finally {
-            spinner.style.display = 'none';
-            submitBtn.disabled = false;
-            submitBtn.style.opacity = '1';
+        const payload = parseJwt(token);
+        console.log('JWT Payload:', payload);
+        if (!payload || !payload.id) {
+            throw new Error('Token không hợp lệ hoặc không tìm thấy ID người dùng');
         }
+
+        if (payload.exp * 1000 < Date.now()) {
+            console.warn('Token đã hết hạn');
+            localStorage.removeItem('accessToken');
+            alert('Phiên đăng nhập đã hết hạn. Vui lòng đăng nhập lại.');
+            window.location.href = 'login.html';
+            return;
+        }
+
+        const userId = payload.id;
+        console.log('Đang lấy thông tin người dùng cho ID:', userId);
+        const response = await fetch(`${API_BASE_URL}/users/${userId}`, {
+            method: 'GET',
+            headers: {
+                'Authorization': `Bearer ${token}`,
+                'Content-Type': 'application/json'
+            }
+        });
+
+        console.log('Trạng thái API Response:', response.status);
+        if (!response.ok) {
+            const errorText = await response.text();
+            throw new Error(`Lỗi HTTP! Trạng thái: ${response.status}, Thông báo: ${errorText}`);
+        }
+
+        const data = await response.json();
+        console.log('Dữ liệu API Response:', data);
+        if (!data.result) {
+            throw new Error('Không có dữ liệu người dùng trong trường "result"');
+        }
+
+        const user = data.result;
+        console.log('Dữ liệu người dùng:', user);
+
+        // Điền thông tin vào form với hiệu ứng
+        usernameInput.value = user.username || '';
+        emailInput.value = user.email || '';
+        phoneInput.value = user.phone || '';
+        addressInput.value = user.address || '';
+        usernameDisplay.textContent = user.username || payload.sub || 'Người dùng';
+
+        // Thêm hiệu ứng success
+        document.querySelector('.form-section').classList.add('form-success');
+        setTimeout(() => {
+            document.querySelector('.form-section').classList.remove('form-success');
+        }, 600);
+    } catch (error) {
+        console.error('Lỗi khi lấy thông tin người dùng:', error.message);
+        alert(`Không thể tải thông tin người dùng: ${error.message}. Vui lòng kiểm tra lại đăng nhập.`);
+    }
+}
+
+// Xử lý submit form với loading
+async function handleFormSubmission(e) {
+    e.preventDefault();
+
+    // Xóa dữ liệu đơn hàng cũ trước khi gửi yêu cầu mới
+    clearStaleOrderData();
+
+    const username = document.getElementById('username')?.value;
+    const email = document.getElementById('email')?.value;
+    const phone = document.getElementById('phone')?.value;
+    const address = document.getElementById('address')?.value;
+    const paymentMethod = document.querySelector('input[name="payment-method"]:checked')?.value;
+
+    if (!username || !email || !phone || !address || !paymentMethod) {
+        alert('Vui lòng điền đầy đủ thông tin.');
+        return;
     }
 
-    // Khởi tạo trang
-    document.addEventListener('DOMContentLoaded', () => {
-        console.log('DOM đã tải, đang khởi tạo trang');
+    // Hiển thị loading
+    const submitBtn = document.querySelector('.btn-checkout');
+    const spinner = document.querySelector('.loading-spinner');
+    const btnText = submitBtn.innerHTML;
 
-        if (typeof updateUI === 'function') {
-            updateUI();
-        } else {
-            console.warn('Hàm updateUI không được định nghĩa');
+    spinner.style.display = 'inline-block';
+    submitBtn.disabled = true;
+    submitBtn.style.opacity = '0.7';
+
+    try {
+        const token = localStorage.getItem('accessToken');
+        if (!token) {
+            throw new Error('Vui lòng đăng nhập để tiếp tục.');
         }
 
-        fetchUserInfo();
+        const payload = parseJwt(token);
+        if (!payload || !payload.id) {
+            throw new Error('Token không hợp lệ hoặc không tìm thấy ID người dùng.');
+        }
 
+        const cart = JSON.parse(localStorage.getItem('cart')) || [];
+        if (cart.length === 0) {
+            throw new Error('Giỏ hàng trống. Vui lòng thêm món ăn trước khi đặt hàng.');
+        }
+
+        // Map cart items to orderItems
+        const orderItems = cart.map(item => ({
+            menuItemId: item.id, // Giả sử item.id là menuItemId
+            quantity: item.quantity
+        }));
+
+        const orderRequest = {
+            userId: payload.id,
+            orderType: 'DELIVERY', // Giả sử checkout dành cho giao hàng
+            tableId: null, // Không cần cho DELIVERY
+            orderItems: orderItems,
+            payment: {
+                paymentMethod: paymentMethod // ONLINE hoặc CASH
+            }
+        };
+
+        console.log('Sending order request:', orderRequest);
+
+        const response = await fetch(`${API_BASE_URL}/orders`, {
+            method: 'POST',
+            headers: {
+                'Authorization': `Bearer ${token}`,
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(orderRequest)
+        });
+
+        if (!response.ok) {
+            const errorData = await response.json();
+            throw new Error(errorData.message || 'Lỗi khi tạo đơn hàng.');
+        }
+
+        const data = await response.json();
+        const orderResponse = data.result;
+
+        // Xóa giỏ hàng sau khi đặt hàng thành công
+        localStorage.removeItem('cart');
+
+        // Gọi updateCartCount nếu tồn tại (từ auth.js)
         if (typeof updateCartCount === 'function') {
             updateCartCount();
         }
 
-        // Tính và hiển thị tổng tiền
-        try {
-            const cart = JSON.parse(localStorage.getItem('cart')) || [];
-            const total = cart.reduce((sum, item) => sum + (item.price * item.quantity), 0);
-            const totalAmountElement = document.getElementById('total-amount');
-            if (totalAmountElement) {
-                totalAmountElement.textContent = total.toLocaleString('vi-VN') + ' VND';
-            } else {
-                console.warn('Không tìm thấy element tổng tiền');
-            }
-        } catch (error) {
-            console.error('Lỗi tính tổng tiền:', error.message);
-        }
-
-        // Gắn sự kiện submit form
-        const checkoutForm = document.getElementById('checkout-form');
-        if (checkoutForm) {
-            checkoutForm.addEventListener('submit', handleFormSubmission);
+        // Xử lý redirect cho thanh toán online
+        if (paymentMethod === 'ONLINE' && orderResponse.payment?.paymentUrl) {
+            alert('Đang chuyển đến trang thanh toán...');
+            window.location.href = orderResponse.payment.paymentUrl;
         } else {
-            console.error('Không tìm thấy form thanh toán');
+            alert('Đặt hàng thành công! Bạn sẽ nhận được xác nhận sớm.');
+            window.location.href = 'order-confirmation.html'; // Trang xác nhận đơn hàng
         }
+    } catch (error) {
+        console.error('Lỗi khi gửi đơn hàng:', error.message);
+        alert(`Lỗi: ${error.message}`);
+    } finally {
+        spinner.style.display = 'none';
+        submitBtn.disabled = false;
+        submitBtn.style.opacity = '1';
+    }
+}
 
-        // Thêm hiệu ứng focus cho inputs
-        const inputs = document.querySelectorAll('.form-control');
-        inputs.forEach(input => {
-            input.addEventListener('focus', function () {
-                this.parentElement.style.transform = 'translateY(-2px)';
-            });
+// Khởi tạo trang
+document.addEventListener('DOMContentLoaded', () => {
+    console.log('DOM đã tải, đang khởi tạo trang');
 
-            input.addEventListener('blur', function () {
-                this.parentElement.style.transform = 'translateY(0)';
-            });
+    if (typeof updateUI === 'function') {
+        updateUI();
+    } else {
+        console.warn('Hàm updateUI không được định nghĩa');
+    }
+
+    fetchUserInfo();
+
+    if (typeof updateCartCount === 'function') {
+        updateCartCount();
+    }
+
+    // Tính và hiển thị tổng tiền
+    try {
+        const cart = JSON.parse(localStorage.getItem('cart')) || [];
+        const total = cart.reduce((sum, item) => sum + (item.price * item.quantity), 0);
+        const totalAmountElement = document.getElementById('total-amount');
+        if (totalAmountElement) {
+            totalAmountElement.textContent = total.toLocaleString('vi-VN') + ' VND';
+        } else {
+            console.warn('Không tìm thấy element tổng tiền');
+        }
+    } catch (error) {
+        console.error('Lỗi tính tổng tiền:', error.message);
+    }
+
+    // Gắn sự kiện submit form
+    const checkoutForm = document.getElementById('checkout-form');
+    if (checkoutForm) {
+        checkoutForm.addEventListener('submit', handleFormSubmission);
+    } else {
+        console.error('Không tìm thấy form thanh toán');
+    }
+
+    // Thêm hiệu ứng focus cho inputs
+    const inputs = document.querySelectorAll('.form-control');
+    inputs.forEach(input => {
+        input.addEventListener('focus', function () {
+            this.parentElement.style.transform = 'translateY(-2px)';
+        });
+
+        input.addEventListener('blur', function () {
+            this.parentElement.style.transform = 'translateY(0)';
         });
     });
+});
 </script>
 </body>
 
