--- a/home-page/html/cart.html
+++ b/home-page/html/cart.html
@@ -212,7 +212,7 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li><a class="dropdown-item" href="profile.html#profile">Chỉnh Sửa Thông Tin</a></li>
-                                <li><a class="dropdown-item" href="#">Xem Đơn Hàng</a></li>
+                                <li><a class="dropdown-item" href="orderHistory.html">Xem Đơn Hàng</a></li>
                                 <li><a class="dropdown-item" href="#" onclick="logout()">Đăng Xuất</a></li>
                             </ul>
                         </div>
