--- a/payment/result.html
+++ b/payment/result.html
@@ -6,87 +6,221 @@
     <title>Kết quả thanh toán</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
-            background-color: #f0f0f0;
+            background: linear-gradient(135deg, #e0eafc, #cfdef3);
         }
         .container {
             text-align: center;
-            padding: 20px;
+            padding: 30px;
             background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+            max-width: 500px;
+            width: 90%;
+            animation: fadeIn 0.5s ease-in-out;
         }
-        .success { color: green; }
-        .cancelled { color: red; }
-        .unknown { color: orange; }
-        #loading { display: none; }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        h1 {
+            color: #333;
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+        .success, .cancelled, .unknown {
+            padding: 20px;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+        .success {
+            background-color: #e6ffed;
+            border: 1px solid #28a745;
+            color: #28a745;
+        }
+        .cancelled {
+            background-color: #ffe6e6;
+            border: 1px solid #dc3545;
+            color: #dc3545;
+        }
+        .unknown {
+            background-color: #fff3cd;
+            border: 1px solid #ffc107;
+            color: #856404;
+        }
+        .icon {
+            font-size: 40px;
+            line-height: 1;
+        }
+        .message-content {
+            flex: 1;
+            text-align: left;
+        }
+        .back-button {
+            display: inline-block;
+            padding: 12px 24px;
+            background-color: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 6px;
+            font-weight: 500;
+            transition: background-color 0.3s;
+        }
+        .back-button:hover {
+            background-color: #0056b3;
+        }
+        #loading {
+            display: none;
+            font-size: 16px;
+            color: #666;
+            margin-bottom: 20px;
+        }
+        .loader {
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid #3498db;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            animation: spin 1s linear infinite;
+            margin: 0 auto 10px;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Kết quả thanh toán</h1>
+        <div id="loading">
+            <div class="loader"></div>
+            Đang tải...
+        </div>
         <p id="payment-message"></p>
-        <div id="loading">Đang tải...</div>
-        <a href="../home-page/html/checkout.html">Quay lại trang chính</a>
+        <a href="../home-page/html/checkout.html" class="back-button">Quay lại trang chính</a>
     </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', async function() {
-    const urlParams = new URLSearchParams(window.location.search);
-    const orderId = urlParams.get('orderId');
-    const messageElement = document.getElementById('payment-message');
-    const loadingElement = document.getElementById('loading');
+            const urlParams = new URLSearchParams(window.location.search);
+            const orderId = urlParams.get('orderId');
+            const status = urlParams.get('status');
+            const messageElement = document.getElementById('payment-message');
+            const loadingElement = document.getElementById('loading');
 
-    if (orderId) {
-        try {
-            if (loadingElement) loadingElement.style.display = 'block';
+            if (orderId) {
+                try {
+                    if (loadingElement) loadingElement.style.display = 'block';
 
-            // Gửi PUT request tới /payments/callback
-            const payload = {
-                orderId: parseInt(orderId),
-                code: urlParams.get('code'),
-                id: urlParams.get('id'),
-                cancel: urlParams.get('cancel') === 'true',
-                status: urlParams.get('status'),
-                orderCode: parseInt(urlParams.get('orderCode'))
-            };
+                    const payload = {
+                        orderId: parseInt(orderId),
+                        code: urlParams.get('code'),
+                        id: urlParams.get('id'),
+                        cancel: urlParams.get('cancel') === 'true',
+                        status: status,
+                        orderCode: parseInt(urlParams.get('orderCode'))
+                    };
+                    console.log('Sending /payments/callback payload:', payload);
 
-            await apiFetch('/payments/callback', {
-                method: 'PUT',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(payload)
-            });
+                    const callbackResponse = await apiFetch('/payments/callback', {
+                        method: 'PUT',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify(payload)
+                    });
+                    console.log('Callback response:', callbackResponse);
 
-            // Kiểm tra trạng thái thanh toán
-            const response = await apiFetch(`/payments/status/${orderId}`);
-            if (response.status === 'PAID') {
-                messageElement.innerHTML = `Thanh toán thành công!<br>Số tiền: ${response.amount.toLocaleString('vi-VN')} VND<br>Mã giao dịch: ${response.transactionId}`;
-                messageElement.className = 'success';
-            } else if (response.status === 'CANCELLED' || response.status === 'FAILED') {
-                messageElement.innerHTML = 'Thanh toán không thành công hoặc đã bị hủy.';
-                messageElement.className = 'cancelled';
+                    const response = await apiFetch(`/payments/status/${orderId}`);
+                    console.log('API /payments/status response:', response);
+
+                    if (response.result.status === 'PAID') {
+                        sessionStorage.setItem('paymentStatus', 'PAID');
+                        messageElement.innerHTML = `
+                            <div class="message-content">
+                                <strong>Thanh toán thành công!</strong><br>
+                                Số tiền: ${response.result.amount.toLocaleString('vi-VN')} VND<br>
+                                Mã giao dịch: ${response.result.transactionId || 'N/A'}
+                            </div>
+                            <span class="icon">✅</span>`;
+                        messageElement.className = 'success';
+                        setTimeout(() => {
+                            window.location.href = '../home-page/html/checkout.html';
+                        }, 5000);
+                    } else if (response.result.status === 'CANCELLED' || response.result.status === 'FAILED') {
+                        messageElement.innerHTML = `
+                            <div class="message-content">
+                                Thanh toán không thành công hoặc đã bị hủy.<br>
+                                Vui lòng thử lại hoặc liên hệ hỗ trợ.
+                            </div>
+                            <span class="icon">❌</span>`;
+                        messageElement.className = 'cancelled';
+                        setTimeout(() => {
+                            window.location.href = '../home-page/html/error.html';
+                        }, 5000);
+                    } else {
+                        messageElement.innerHTML = `
+                            <div class="message-content">
+                                Trạng thái thanh toán: ${response.result.status}<br>
+                                Vui lòng kiểm tra lại sau.
+                            </div>
+                            <span class="icon">⚠️</span>`;
+                        messageElement.className = 'unknown';
+                        setTimeout(() => {
+                            window.location.href = '../home-page/html/error.html';
+                        }, 5000);
+                    }
+                } catch (error) {
+                    console.error('Error checking payment status:', error.message, error.stack);
+                    if (status === 'PAID') {
+                        sessionStorage.setItem('paymentStatus', 'PAID');
+                        messageElement.innerHTML = `
+                            <div class="message-content">
+                                <strong>Thanh toán thành công!</strong><br>
+                                Số tiền: ${urlParams.get('amount') || 'N/A'} VND<br>
+                                Mã giao dịch: ${urlParams.get('id') || 'N/A'}
+                            </div>
+                            <span class="icon">✅</span>`;
+                        messageElement.className = 'success';
+                        setTimeout(() => {
+                            window.location.href = '../home-page/html/checkout.html';
+                        }, 5000);
+                    } else {
+                        messageElement.innerHTML = `
+                            <div class="message-content">
+                                Không thể xác nhận trạng thái thanh toán.<br>
+                                Lỗi: ${error.message}<br>
+                                Vui lòng kiểm tra lại sau hoặc liên hệ hỗ trợ.
+                            </div>
+                            <span class="icon">❌</span>`;
+                        messageElement.className = 'cancelled';
+                        setTimeout(() => {
+                            window.location.href = '../home-page/html/error.html';
+                        }, 5000);
+                    }
+                } finally {
+                    sessionStorage.removeItem('pendingOrderId');
+                    if (loadingElement) loadingElement.style.display = 'none';
+                }
             } else {
-                messageElement.innerHTML = `Trạng thái thanh toán: ${response.status}`;
-                messageElement.className = 'unknown';
+                messageElement.innerHTML = `
+                    <div class="message-content">
+                        Không tìm thấy thông tin thanh toán.
+                    </div>
+                    <span class="icon">❌</span>`;
+                messageElement.className = 'cancelled';
+                setTimeout(() => {
+                    window.location.href = '../home-page/html/error.html';
+                }, 5000);
             }
-        } catch (error) {
-            console.error('Error checking payment status:', error);
-            messageElement.innerHTML = 'Không thể xác nhận trạng thái thanh toán. Vui lòng kiểm tra lại sau hoặc liên hệ hỗ trợ.';
-            messageElement.className = 'cancelled';
-        } finally {
-            sessionStorage.removeItem('pendingOrderId');
-            if (loadingElement) loadingElement.style.display = 'none';
-        }
-    } else {
-        messageElement.innerHTML = 'Không tìm thấy thông tin thanh toán.';
-        messageElement.className = 'cancelled';
-    }
-});
+        });
     </script>
     <script src="../js/fetch-api.js"></script>
 </body>
