--- a/schedule/lichlam.html
+++ b/schedule/lichlam.html
@@ -452,20 +452,20 @@ ${groupedShifts[shiftType].map(shift => `
                 return;
             }
 
-            if (shiftDate.setHours(0, 0, 0, 0) === today.setHours(0, 0, 0, 0)) {
-                if (shiftType === 'morning' && (currentHours > 8 || (currentHours === 8 && currentMinutes >= 30))) {
-                    showAlert('Không thể thêm ca sáng vì đã qua giờ bắt đầu (08:30).', 'Lỗi', 'error');
-                    return;
-                }
-                if (shiftType === 'afternoon' && (currentHours > 12 || (currentHours === 12 && currentMinutes >= 30))) {
-                    showAlert('Không thể thêm ca chiều vì đã qua giờ bắt đầu (12:30).', 'Lỗi', 'error');
-                    return;
-                }
-                if (shiftType === 'night' && (currentHours > 17 || (currentHours === 17 && currentMinutes >= 30))) {
-                    showAlert('Không thể thêm ca tối vì đã qua giờ bắt đầu (17:30).', 'Lỗi', 'error');
-                    return;
-                }
-            }
+            // if (shiftDate.setHours(0, 0, 0, 0) === today.setHours(0, 0, 0, 0)) {
+            //     if (shiftType === 'morning' && (currentHours > 8 || (currentHours === 8 && currentMinutes >= 30))) {
+            //         showAlert('Không thể thêm ca sáng vì đã qua giờ bắt đầu (08:30).', 'Lỗi', 'error');
+            //         return;
+            //     }
+            //     if (shiftType === 'afternoon' && (currentHours > 12 || (currentHours === 12 && currentMinutes >= 30))) {
+            //         showAlert('Không thể thêm ca chiều vì đã qua giờ bắt đầu (12:30).', 'Lỗi', 'error');
+            //         return;
+            //     }
+            //     if (shiftType === 'night' && (currentHours > 17 || (currentHours === 17 && currentMinutes >= 30))) {
+            //         showAlert('Không thể thêm ca tối vì đã qua giờ bắt đầu (17:30).', 'Lỗi', 'error');
+            //         return;
+            //     }
+            // }
 
             const newShifts = employeeNames.map(name => ({
                 name,
