--- a/waiter/menu.html
+++ b/waiter/menu.html
@@ -22,13 +22,10 @@
 
                     <input type="text" id="keywordFilter" placeholder="Tìm kiếm món ăn...">
 
-                    <select id="menuStatusFilter">
-                        <option value="">Tất cả trạng thái</option>
-                        <option value="AVAILABLE">Có sẵn</option>
-                        <option value="UNAVAILABLE">Hết hàng</option>
-                    </select>
-
-                    <button onclick="applyMenuFilters()">Áp dụng</button>
+                    <button onclick="applyMenuFilters()">
+                        <i class="fas fa-search me-1"></i>
+                        Áp dụng
+                    </button>
                     <button onclick="resetFilters()">Đặt lại</button>
                 </div>
             </div>
