--- a/waiter/index.html
+++ b/waiter/index.html
@@ -25,6 +25,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/table-style.css" rel="stylesheet">
 </head>
 
 <body>
